fixing conflicts with libgp11 from gnome-keyring (report if this change broke any thing)

--- a/mate-keyring/daemon/Makefile.am
+++ b/mate-keyring/daemon/Makefile.am
@@ -43,7 +43,7 @@ mate_keyring_daemon_LDADD = \
 	$(top_builddir)/pkcs11/ssh-store/libgkm-ssh-store.la \
 	$(top_builddir)/pkcs11/user-store/libgkm-user-store.la \
 	$(top_builddir)/pkcs11/gkm/libgkm.la \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/egg/libegg-dbus.la \
 	$(DAEMON_LIBS) \
 	$(GOBJECT_LIBS) \
