--- a/mate-keyring/daemon/gpg-agent/Makefile.in
+++ b/mate-keyring/daemon/gpg-agent/Makefile.in
@@ -61,9 +61,10 @@ gkd_gpg_agent_standalone_OBJECTS =  \
 am__DEPENDENCIES_1 =
 gkd_gpg_agent_standalone_DEPENDENCIES = libgkd-gpg-agent.la \
 	$(top_builddir)/ui/libgku-prompt.la \
-	$(top_builddir)/gp11/libgp11.la $(top_builddir)/egg/libegg.la \
+	$(top_builddir)/gp11/libmategp11.la \
+	$(top_builddir)/egg/libegg.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -313,7 +314,7 @@ gkd_gpg_agent_standalone_SOURCES = \
 gkd_gpg_agent_standalone_LDADD = \
 	libgkd-gpg-agent.la \
 	$(top_builddir)/ui/libgku-prompt.la \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/egg/libegg.la \
 	$(GOBJECT_LIBS) \
 	$(GTHREAD_LIBS) \
