--- a/mate-keyring/daemon/login/Makefile.in
+++ b/mate-keyring/daemon/login/Makefile.in
@@ -46,7 +46,7 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 am__DEPENDENCIES_1 =
-libgkd_login_la_DEPENDENCIES = $(top_builddir)/gp11/libgp11.la \
+libgkd_login_la_DEPENDENCIES = $(top_builddir)/gp11/libmategp11.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 am_libgkd_login_la_OBJECTS = gkd-login.lo
 libgkd_login_la_OBJECTS = $(am_libgkd_login_la_OBJECTS)
@@ -295,7 +295,7 @@ libgkd_login_la_SOURCES = \
 	gkd-login.c gkd-login.h
 
 libgkd_login_la_LIBADD = \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(GOBJECT_LIBS) \
 	$(GLIB_LIBS)
 
