--- a/mate-keyring/daemon/ssh-agent/Makefile.in
+++ b/mate-keyring/daemon/ssh-agent/Makefile.in
@@ -61,7 +61,7 @@ gkd_ssh_agent_standalone_OBJECTS =  \
 	$(am_gkd_ssh_agent_standalone_OBJECTS)
 am__DEPENDENCIES_1 =
 gkd_ssh_agent_standalone_DEPENDENCIES = libgkd-ssh-agent.la \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/egg/libegg-buffer.la \
 	$(top_builddir)/egg/libegg-secure.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
@@ -315,7 +315,7 @@ gkd_ssh_agent_standalone_SOURCES = \
 
 gkd_ssh_agent_standalone_LDADD = \
 	libgkd-ssh-agent.la \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/egg/libegg-buffer.la \
 	$(top_builddir)/egg/libegg-secure.la \
 	$(GOBJECT_LIBS) \
