--- a/mate-keyring/gcr/Makefile.in
+++ b/mate-keyring/gcr/Makefile.in
@@ -79,7 +79,7 @@ am__DEPENDENCIES_1 =
 libmategcr@GCR_VERSION_SUFFIX@_la_DEPENDENCIES =  \
 	$(top_builddir)/egg/libegg.la \
 	$(top_builddir)/egg/libegg-entry-buffer.la \
-	$(top_builddir)/gp11/libgp11.la $(am__DEPENDENCIES_1) \
+	$(top_builddir)/gp11/libmategp11.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
 am__objects_1 = libmategcr@GCR_VERSION_SUFFIX@_la-gcr-marshal.lo
@@ -431,7 +431,7 @@ libmategcr@GCR_VERSION_SUFFIX@_la_LDFLAGS = \
 libmategcr@GCR_VERSION_SUFFIX@_la_LIBADD = \
 	$(top_builddir)/egg/libegg.la \
 	$(top_builddir)/egg/libegg-entry-buffer.la \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(GOBJECT_LIBS) \
 	$(GLIB_LIBS) \
 	$(LIBGCRYPT_LIBS) \
