--- a/mate-keyring/daemon/Makefile.in
+++ b/mate-keyring/daemon/Makefile.in
@@ -76,7 +76,7 @@ mate_keyring_daemon_DEPENDENCIES =  \
 	$(top_builddir)/pkcs11/ssh-store/libgkm-ssh-store.la \
 	$(top_builddir)/pkcs11/user-store/libgkm-user-store.la \
 	$(top_builddir)/pkcs11/gkm/libgkm.la \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/egg/libegg-dbus.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
@@ -409,7 +409,7 @@ mate_keyring_daemon_LDADD = \
 	$(top_builddir)/pkcs11/ssh-store/libgkm-ssh-store.la \
 	$(top_builddir)/pkcs11/user-store/libgkm-user-store.la \
 	$(top_builddir)/pkcs11/gkm/libgkm.la \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/egg/libegg-dbus.la \
 	$(DAEMON_LIBS) \
 	$(GOBJECT_LIBS) \
