--- a/mate-keyring/gcr/tests/Makefile.in
+++ b/mate-keyring/gcr/tests/Makefile.in
@@ -327,7 +327,7 @@ TESTING_LIBS = \
 	$(top_builddir)/gcr/libgcr.la \
 	$(top_builddir)/egg/libegg.la \
 	$(top_builddir)/egg/libegg-entry-buffer.la \
-	$(top_builddir)/gp11/libgp11.la
+	$(top_builddir)/gp11/libmategp11.la
 
 TESTING_FLAGS = \
 	-DGCR_API_SUBJECT_TO_CHANGE
