--- a/mate-keyring/gp11/Makefile.am
+++ b/mate-keyring/gp11/Makefile.am
@@ -13,9 +13,9 @@ INCLUDES = \
 BUILT_SOURCES = \
 	gp11-marshal.c gp11-marshal.h
 
-lib_LTLIBRARIES = libgp11.la
+lib_LTLIBRARIES = libmategp11.la
 
-libgp11_la_SOURCES = \
+libmategp11_la_SOURCES = \
 	gp11.h gp11-private.h pkcs11.h \
 	gp11-attributes.c \
 	gp11-call.c \
@@ -25,12 +25,12 @@ libgp11_la_SOURCES = \
 	gp11-session.c \
 	gp11-slot.c \
 	$(BUILT_SOURCES)
-    
-libgp11_la_LDFLAGS = \
+
+libmategp11_la_LDFLAGS = \
     	-version-info $(GP11_LT_RELEASE) \
 	-no-undefined -export-symbols-regex 'gp11_*'
-    
-libgp11_la_LIBADD = \
+
+libmategp11_la_LIBADD = \
 	$(GOBJECT_LIBS) \
 	$(GTHREAD_LIBS) \
 	$(GIO_LIBS) \
@@ -49,19 +49,18 @@ pkgconfig_DATA = gp11-$(GP11_MAJOR).pc
 EXTRA_DIST = \
 	gp11.pc.in \
 	gp11-marshal.list
-    
+
 DISTCLEANFILES = \
 	gp11-$(GP11_MAJOR).pc
-    
+
 gp11-$(GP11_MAJOR).pc: gp11.pc
 	cp gp11.pc gp11-$(GP11_MAJOR).pc
 
 if WITH_TESTS
 TESTS_DIR = tests
 else
-TESTS_DIR = 
+TESTS_DIR =
 endif
 
 SUBDIRS = . \
 	$(TESTS_DIR)
-	
