--- a/mate-keyring/gp11/Makefile.in
+++ b/mate-keyring/gp11/Makefile.in
@@ -72,19 +72,21 @@ am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(pkgconfigdir)" \
 	"$(DESTDIR)$(incdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 am__DEPENDENCIES_1 =
-libgp11_la_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
+libmategp11_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1)
 am__objects_1 = gp11-marshal.lo
-am_libgp11_la_OBJECTS = gp11-attributes.lo gp11-call.lo gp11-misc.lo \
-	gp11-module.lo gp11-object.lo gp11-session.lo gp11-slot.lo \
-	$(am__objects_1)
-libgp11_la_OBJECTS = $(am_libgp11_la_OBJECTS)
+am_libmategp11_la_OBJECTS = gp11-attributes.lo gp11-call.lo \
+	gp11-misc.lo gp11-module.lo gp11-object.lo gp11-session.lo \
+	gp11-slot.lo $(am__objects_1)
+libmategp11_la_OBJECTS = $(am_libmategp11_la_OBJECTS)
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
 am__v_lt_0 = --silent
-libgp11_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
-	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
-	$(libgp11_la_LDFLAGS) $(LDFLAGS) -o $@
+libmategp11_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
+	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CCLD) \
+	$(AM_CFLAGS) $(CFLAGS) $(libmategp11_la_LDFLAGS) $(LDFLAGS) -o \
+	$@
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -111,8 +113,8 @@ am__v_CCLD_0 = @echo "  CCLD  " $@;
 AM_V_GEN = $(am__v_GEN_$(V))
 am__v_GEN_ = $(am__v_GEN_$(AM_DEFAULT_VERBOSITY))
 am__v_GEN_0 = @echo "  GEN   " $@;
-SOURCES = $(libgp11_la_SOURCES)
-DIST_SOURCES = $(libgp11_la_SOURCES)
+SOURCES = $(libmategp11_la_SOURCES)
+DIST_SOURCES = $(libmategp11_la_SOURCES)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	html-recursive info-recursive install-data-recursive \
 	install-dvi-recursive install-exec-recursive \
@@ -362,8 +364,8 @@ INCLUDES = \
 BUILT_SOURCES = \
 	gp11-marshal.c gp11-marshal.h
 
-lib_LTLIBRARIES = libgp11.la
-libgp11_la_SOURCES = \
+lib_LTLIBRARIES = libmategp11.la
+libmategp11_la_SOURCES = \
 	gp11.h gp11-private.h pkcs11.h \
 	gp11-attributes.c \
 	gp11-call.c \
@@ -374,11 +376,11 @@ libgp11_la_SOURCES = \
 	gp11-slot.c \
 	$(BUILT_SOURCES)
 
-libgp11_la_LDFLAGS = \
+libmategp11_la_LDFLAGS = \
     	-version-info $(GP11_LT_RELEASE) \
 	-no-undefined -export-symbols-regex 'gp11_*'
 
-libgp11_la_LIBADD = \
+libmategp11_la_LIBADD = \
 	$(GOBJECT_LIBS) \
 	$(GTHREAD_LIBS) \
 	$(GIO_LIBS) \
@@ -466,8 +468,8 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libgp11.la: $(libgp11_la_OBJECTS) $(libgp11_la_DEPENDENCIES) 
-	$(AM_V_CCLD)$(libgp11_la_LINK) -rpath $(libdir) $(libgp11_la_OBJECTS) $(libgp11_la_LIBADD) $(LIBS)
+libmategp11.la: $(libmategp11_la_OBJECTS) $(libmategp11_la_DEPENDENCIES) 
+	$(AM_V_CCLD)$(libmategp11_la_LINK) -rpath $(libdir) $(libmategp11_la_OBJECTS) $(libmategp11_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
