--- a/mate-keyring/tool/Makefile.in
+++ b/mate-keyring/tool/Makefile.in
@@ -54,7 +54,7 @@ mate_keyring@GCR_VERSION_SUFFIX@_OBJECTS =  \
 	$(am_mate_keyring@GCR_VERSION_SUFFIX@_OBJECTS)
 am__DEPENDENCIES_1 =
 mate_keyring@GCR_VERSION_SUFFIX@_DEPENDENCIES =  \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(top_builddir)/egg/libegg.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
@@ -304,7 +304,7 @@ mate_keyring@GCR_VERSION_SUFFIX@_CFLAGS = \
 	-DMATELOCALEDIR=\""$(datadir)/locale"\"
 
 mate_keyring@GCR_VERSION_SUFFIX@_LDADD = \
-	$(top_builddir)/gp11/libgp11.la \
+	$(top_builddir)/gp11/libmategp11.la \
 	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(top_builddir)/egg/libegg.la \
 	$(GTHREAD_LIBS) \
