fixing conflicts with libgcr from gnome-keyring (report if this change broke any thing)

--- a/mate-keyring/gcr/Makefile.in
+++ b/mate-keyring/gcr/Makefile.in
@@ -366,7 +366,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-uidir = $(datadir)/gcr@GCR_VERSION_SUFFIX@/ui/
+uidir = $(datadir)/libgcr@GCR_VERSION_SUFFIX@/ui/
 ui_DATA = \
 	gcr-certificate-basics-widget.ui \
 	gcr-import-dialog.ui \
@@ -375,7 +375,7 @@ ui_DATA = \
 
 # ------------------------------------------------------------------
 # HEADERS
-incdir = $(includedir)/gcr@GCR_VERSION_SUFFIX@/gcr
+incdir = $(includedir)/libgcr@GCR_VERSION_SUFFIX@/gcr
 inc_HEADERS = \
 	gcr.h \
 	gcr-certificate.h \
