--- a/mate-keyring/gcr/Makefile.in
+++ b/mate-keyring/gcr/Makefile.in
@@ -366,7 +366,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-uidir = $(datadir)/libgcr@GCR_VERSION_SUFFIX@/ui/
+uidir = $(datadir)/mategcr@GCR_VERSION_SUFFIX@/ui/
 ui_DATA = \
 	gcr-certificate-basics-widget.ui \
 	gcr-import-dialog.ui \
@@ -375,7 +375,7 @@ ui_DATA = \
 
 # ------------------------------------------------------------------
 # HEADERS
-incdir = $(includedir)/libgcr@GCR_VERSION_SUFFIX@/gcr
+incdir = $(includedir)/mategcr@GCR_VERSION_SUFFIX@/gcr
 inc_HEADERS = \
 	gcr.h \
 	gcr-certificate.h \
@@ -453,7 +453,7 @@ CLEANFILES = \
 DISTCLEANFILES = \
 	$(pkgconfig_DATA)
 
-@WITH_TESTS_FALSE@TESTS_DIR = 
+@WITH_TESTS_FALSE@TESTS_DIR =
 @WITH_TESTS_TRUE@TESTS_DIR = tests
 SUBDIRS = . \
 	$(TESTS_DIR)
@@ -526,7 +526,7 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libmategcr@GCR_VERSION_SUFFIX@.la: $(libmategcr@GCR_VERSION_SUFFIX@_la_OBJECTS) $(libmategcr@GCR_VERSION_SUFFIX@_la_DEPENDENCIES) 
+libmategcr@GCR_VERSION_SUFFIX@.la: $(libmategcr@GCR_VERSION_SUFFIX@_la_OBJECTS) $(libmategcr@GCR_VERSION_SUFFIX@_la_DEPENDENCIES)
 	$(AM_V_CCLD)$(libmategcr@GCR_VERSION_SUFFIX@_la_LINK) -rpath $(libdir) $(libmategcr@GCR_VERSION_SUFFIX@_la_OBJECTS) $(libmategcr@GCR_VERSION_SUFFIX@_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
