testing matecomponent detect fail

--- a/mate-panel/configure.ac
+++ b/mate-panel/configure.ac
@@ -276,10 +276,17 @@ if test "x$enable_matecomponent" = "xno" ; then
   HAVE_MATECOMPONENT=no
 else
   HAVE_MATECOMPONENT=no
-  PKG_CHECK_MODULES(MATECOMPONENT, MateCORBA-2.0 libmatecomponentui-2.0, HAVE_MATECOMPONENT=yes, HAVE_MATECOMPONENT=no)
+  PKG_CHECK_MODULES(MATECOMPONENT, MateCORBA-2.0, HAVE_MATECOMPONENT=yes, HAVE_MATECOMPONENT=no)
+  
+  if test "x$enable_matecomponent" = "xyes" -a "x$HAVE_MATECOMPONENT" = "xno" ; then
+    AC_MSG_ERROR(MateComponent compatibility modules explicity enabled but not available, MateCORBA-2.0 fail)
+  fi
+  
+  PKG_CHECK_MODULES(MATECOMPONENT, libmatecomponentui-2.0, HAVE_MATECOMPONENT=yes, HAVE_MATECOMPONENT=no)
+  
 
   if test "x$enable_matecomponent" = "xyes" -a "x$HAVE_MATECOMPONENT" = "xno" ; then
-    AC_MSG_ERROR(MateComponent compatibility modules explicity enabled but not available)
+    AC_MSG_ERROR(MateComponent compatibility modules explicity enabled but not available, libmatecomponentui-2.0 fail)
   fi
 
   if test "x$HAVE_MATECOMPONENT" = "xyes"; then
