updating package depends array

--- a/libmate/distro/ubuntu/build
+++ b/libmate/distro/ubuntu/build
@@ -5,7 +5,12 @@ pkgname=libmate
 pkgver=2011.10.29
 pkgrel=1
 pkgdesc="Common libraries for MATE"
-depends=('mate-conf')
+depends=('libavahi-client3' 'libavahi-common3' 'libavahi-glib1' 'libc6'
+         'libdbus-1-3' 'libdbus-glib-1-2' 'libglib2.0-0' 'libmatecomponent'
+         'libpopt0' 'libselinux1' 'libxml2' 'mate-conf' 'mate-corba' 'mate-vfs')
+makedepends=('mate-doc-utils' 'mate-common' 'mate-corba' 'mate-conf'
+             'libmatecomponent' 'mate-mime-data' 'libglib2.0-dev' 'mate-vfs'
+             'libcanberra-dev' 'libpopt-dev')
 
 # editar esta funcion!
 build() {
