updating package depends array

--- a/libmatecanvas/distro/archlinux/PKGBUILD
+++ b/libmatecanvas/distro/archlinux/PKGBUILD
@@ -4,7 +4,7 @@ pkgrel=1
 pkgdesc="The MATE Canvas library"
 arch=('i686' 'x86_64')
 license=('LGPL')
-depends=('libglade' 'libart-lgpl')
+depends=('libglade' 'libart-lgpl' 'libmate')
 makedepends=('pkgconfig' 'intltool')
 options=('!libtool')
 groups=('mate')
