--- a/libmatecanvas/distro/ubuntu/build
+++ b/libmatecanvas/distro/ubuntu/build
@@ -5,7 +5,9 @@ pkgname=libmatecanvas
 pkgver=2011.10.29
 pkgrel=1
 pkgdesc="The MATE Canvas library"
-depends=('libart-2.0-2' 'libglade2-0')
+depends=('libart-2.0-2' 'libatk1.0-0' 'libc6' 'libcairo2' 'libfontconfig1'
+         'libfreetype6' 'libgail18' 'libgdk-pixbuf2.0-0' 'libglade2-0'
+         'libglib2.0-0' 'libgtk2.0-0' 'libpango1.0-0' 'libxml2' 'libmate')
 makedepends=('libgail-dev' 'libgtk2.0-dev' 'libart-2.0-dev' 'libglade2-dev')
 
 # editar esta funcion!
