adding misc changes

--- a/mate-corba/distro/ubuntu/build
+++ b/mate-corba/distro/ubuntu/build
@@ -5,7 +5,12 @@ pkgname=mate-corba
 pkgver=2011.10.29
 pkgrel=1
 pkgdesc="Thin and fast CORBA ORB"
-makedepends=('libglib2.0-dev' 'libidl-dev')
+depends=('libc6' 'libglib2.0-0' 'libidl0')
+makedepends=('libglib2.0-dev' 'libidl-dev' 'pkg-config' 'cdbs' 'debhelper' 'docbook-xsl' 'gtk-doc-tools')
+
+    
+conflicts=('libmatecorba-dev')
+provides=('libmatecorba-dev')
 
 # editar esta funcion!
 build() {
