--- a/mate-desktop/mate-about/mate-about.desktop.in.in
+++ b/mate-desktop/mate-about/mate-about.desktop.in.in
@@ -2,7 +2,7 @@
 _Name=About MATE
 _Comment=Learn more about MATE
 Exec=mate-about
-Icon=mate
+Icon=desktop
 Terminal=false
 Type=Application
 Categories=MATE;GTK;Core;Utility;
