--- a/mate-doc-utils/distro/ubuntu/build
+++ b/mate-doc-utils/distro/ubuntu/build
@@ -6,7 +6,7 @@ pkgver=2011.10.29
 pkgrel=1
 pkgdesc="Documentation utilities for MATE"
 #depends="libxslt1.1, python, docbook-xml, rarian-compat, gnome-doc-utils"
-depends=('libxml2')
+depends=('libxml2' 'libxslt1.1' 'python-libxml2')
 makedepends=('libxml2-dev' 'libxslt1-dev' 'automake' 'intltool')
 
 # editar esta funcion!
