--- a/mate-panel/distro/archlinux/PKGBUILD
+++ b/mate-panel/distro/archlinux/PKGBUILD
@@ -19,7 +19,7 @@ build() {
 	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
 		--libexecdir=/usr/lib/mate-panel \
-		--disable-scrollkeeper || return 1
+		--disable-scrollkeeper --enable-introspection --enable-matecomponent || return 1
 	make || return 1
 }
 
