--- a/mate-panel/distro/ubuntu/build
+++ b/mate-panel/distro/ubuntu/build
@@ -18,7 +18,7 @@ build() {
 	./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
 		--libexecdir=/usr/lib/mate-panel \
-		--disable-scrollkeeper || return 1
+		--disable-scrollkeeper --enable-introspection --enable-matecomponent || return 1
 	make || return 1
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
