--- a/libmatecomponent/distro/ubuntu/build
+++ b/libmatecomponent/distro/ubuntu/build
@@ -6,7 +6,7 @@ pkgver=2011.10.29
 pkgrel=1
 pkgdesc="A set of language and system independant CORBA interfaces for creating reusable components"
 depends=('mate-corba')
-makedepends=('flex' 'libpopt-dev' 'bison')
+makedepends=('flex' 'libpopt-dev' 'bison' 'libmatecomponent' 'libglib2.0-dev')
 
 # editar esta funcion!
 build() {
