--- a/mate-conf/distro/ubuntu/build
+++ b/mate-conf/distro/ubuntu/build
@@ -20,7 +20,7 @@ build() {
 
 	./configure --prefix=/usr --sysconfdir=/etc \
 		--libexecdir=/usr/lib/MateConf \
-		--localstatedir=/var \
+		--localstatedir=/var --disable-static \
 		--enable-defaults-service --enable-gsettings-backend=no || return 1
 	make || return 1
 
