--- a/mate-desktop/distro/archlinux/PKGBUILD
+++ b/mate-desktop/distro/archlinux/PKGBUILD
@@ -17,7 +17,7 @@ build() {
 
 	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static --disable-scrollkeeper \
-		--disable-startup-notification --enable-unique || return 1
+		--disable-startup-notification --enable-unique --disable-nyancat || return 1
 
 	make || return 1
 }
