updating hash and version number

--- a/mate-file-manager/distro/archlinux/PKGBUILD
+++ b/mate-file-manager/distro/archlinux/PKGBUILD
@@ -1,16 +1,16 @@
 pkgname=mate-file-manager
-pkgver=2011.10.29
+pkgver=2011.11.10
 pkgrel=1
 pkgdesc="The MATE shell and file manager"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libexif' 'exempi' 'mate-icon-theme' 'desktop-file-utils' 'gvfs' 'libunique' 'mate-desktop')
+depends=('libexif' 'exempi' 'mate-icon-theme' 'shared-mime-info' 'desktop-file-utils' 'gvfs' 'libunique' 'mate-desktop')
 makedepends=('pkgconfig' 'intltool')
 url="http://matsusoft.com.ar/projects"
 options=('!libtool' '!emptydirs')
 install=mate-file-manager.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('1c6f90a2bd1f3326cc2560e22618128e2d7e641211e65fc4b43a2ba7a4815529')
+sha256sums=('4807b5431c3760139d463330e83455d1b560a6d873c4e2c4f3a57f6eb1719ec0')
 groups=('mate')
 
 build() {
