use autogen.sh to build mate-file-manager

--- a/mate-file-manager/distro/archlinux/PKGBUILD
+++ b/mate-file-manager/distro/archlinux/PKGBUILD
@@ -16,7 +16,7 @@ groups=('mate')
 build() {
 	cd "${srcdir}/${pkgname}"
 
-	./configure --prefix=/usr --sysconfdir=/etc \
+	./autogen.sh --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
 		--libexecdir=/usr/lib/caja --enable-unique \
 		--disable-update-mimedb || return 1
