--- a/mate-file-manager/libcaja-extension/Makefile.in
+++ b/mate-file-manager/libcaja-extension/Makefile.in
@@ -185,6 +185,8 @@ GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
 GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
+GTKDOC_DEPS_CFLAGS = @GTKDOC_DEPS_CFLAGS@
+GTKDOC_DEPS_LIBS = @GTKDOC_DEPS_LIBS@
 GTKDOC_MKPDF = @GTKDOC_MKPDF@
 GTKDOC_REBASE = @GTKDOC_REBASE@
 GTK_REQUIRED = @GTK_REQUIRED@
@@ -337,6 +339,7 @@ INCLUDES = \
 	$(WARNING_CFLAGS) \
 	$(DISABLE_DEPRECATED_CFLAGS) \
 	-DDATADIR=\""$(datadir)"\" \
+	$(UNIQUE_CFLAGS) \
 	$(NULL)
 
 libcaja_extension_la_LDFLAGS = \
