--- a/mate-file-manager/libcaja-private/Makefile.am
+++ b/mate-file-manager/libcaja-private/Makefile.am
@@ -15,6 +15,7 @@ INCLUDES = 						\
 	-DSYSCONFDIR=\""$(sysconfdir)"\" 			\
 	-DCAJA_DATADIR=\""$(datadir)/caja"\" 	\
 	-DCAJA_EXTENSIONDIR=\""$(libdir)/caja/extensions-2.0"\" \
+	$(UNIQUE_CFLAGS) \
 	$(NULL)
 
 dependency_static_libs = \
