--- a/mate-file-manager/libcaja-private/Makefile.in
+++ b/mate-file-manager/libcaja-private/Makefile.in
@@ -210,6 +210,8 @@ GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
 GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
+GTKDOC_DEPS_CFLAGS = @GTKDOC_DEPS_CFLAGS@
+GTKDOC_DEPS_LIBS = @GTKDOC_DEPS_LIBS@
 GTKDOC_MKPDF = @GTKDOC_MKPDF@
 GTKDOC_REBASE = @GTKDOC_REBASE@
 GTK_REQUIRED = @GTK_REQUIRED@
@@ -367,6 +369,7 @@ INCLUDES = \
 	-DSYSCONFDIR=\""$(sysconfdir)"\" 			\
 	-DCAJA_DATADIR=\""$(datadir)/caja"\" 	\
 	-DCAJA_EXTENSIONDIR=\""$(libdir)/caja/extensions-2.0"\" \
+	$(UNIQUE_CFLAGS) \
 	$(NULL)
 
 dependency_static_libs = \
