--- a/mate-file-manager/src/Makefile.am
+++ b/mate-file-manager/src/Makefile.am
@@ -31,6 +31,7 @@ INCLUDES =							\
 	-DSYSCONFDIR=\""$(sysconfdir)"\" 			\
 	-DVERSION="\"$(VERSION)\"" 				\
 	$(DISABLE_DEPRECATED_CFLAGS)                            \
+	$(UNIQUE_CFLAGS) \
 	$(NULL)
 
 LDADD =\
