--- a/mate-file-manager/configure.in
+++ b/mate-file-manager/configure.in
@@ -19,7 +19,7 @@ dnl Interface break is not allowed.
 m4_define(caja_extension_current,  3)
 m4_define(caja_extension_revision, 0)
 
-AC_INIT([caja], [2011.10.29], [https://github.com/perberos/mate-desktop-environment])
+AC_INIT([caja], [2011.11.10], [https://github.com/perberos/mate-desktop-environment])
 
 dnl ---------------------------------------------------------------------------
 dnl GTK library version
@@ -85,22 +85,22 @@ AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
 AC_CHECK_LIB(m, floor)
 
 PKG_CHECK_MODULES(ALL, [
-	glib-2.0 >= glib_minver
-	mate-desktop-2.0 >= mate_desktop_minver
-	gthread-2.0
-	gio-unix-2.0
-	gio-2.0
-	pango >= pango_minver
-	gtk+-$GTK_API_VERSION >= $GTK_REQUIRED
-	libxml-2.0 >= xml_minver
-	gail >= gail_minver
+    glib-2.0 >= glib_minver
+    mate-desktop-2.0 >= mate_desktop_minver
+    gthread-2.0
+    gio-unix-2.0
+    gio-2.0
+    pango >= pango_minver
+    gtk+-$GTK_API_VERSION >= $GTK_REQUIRED
+    libxml-2.0 >= xml_minver
+    gail >= gail_minver
 ])
 dnl ==========================================================================
 
 GETTEXT_PACKAGE=caja
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",
-                   [the gettext translation domain])
+    [the gettext translation domain])
 
 AM_GLIB_GNU_GETTEXT
 GLIB_DEFINE_LOCALEDIR(MATELOCALEDIR)
@@ -122,9 +122,9 @@ AC_ARG_ENABLE(profiler,
 profiling_support=off
 if test "x$ENABLE_PROFILER" = "x1"
 then
-	CFLAGS="-g -O -gdwarf-2 -finstrument-functions -D__NO_STRING_INLINES $CFLAGS"
-	LDFLAGS="/mate/MATE2/lib/libprofiler.so -lpthread $LDFLAGS"
-	profiling_support=on
+    CFLAGS="-g -O -gdwarf-2 -finstrument-functions -D__NO_STRING_INLINES $CFLAGS"
+    LDFLAGS="/mate/MATE2/lib/libprofiler.so -lpthread $LDFLAGS"
+    profiling_support=on
 fi
 
 AC_SUBST(ENABLE_PROFILER)
@@ -172,8 +172,8 @@ x_libs_for_checks=$x_libs
 #done
 
 AC_CHECK_LIB(X11, XOpenDisplay, :,
-	AC_MSG_ERROR([*** libX11 not found.  Check 'config.log' for more details.]),
-	$x_libs_for_checks)
+    AC_MSG_ERROR([*** libX11 not found.  Check 'config.log' for more details.]),
+    $x_libs_for_checks)
 
 dnl ==========================================================================
 
@@ -181,15 +181,15 @@ AM_CONDITIONAL(HAVE_EXIF, false)
 
 dnl libexif checking
 
-PKG_CHECK_MODULES(EXIF, libexif > exif_minver, [
-		  AM_CONDITIONAL(HAVE_EXIF, true)
-		  AC_DEFINE(HAVE_EXIF, 1, [Define to enable EXIF support])
-		  ], [
-		  PKG_CHECK_MODULES(EXIF, libexif = exif_minver, [
-				    AM_CONDITIONAL(HAVE_EXIF, true)
-				    AC_DEFINE(HAVE_OLD_EXIF, 1, [Define if your EXIF library has old API])
-				    ], [AM_CONDITIONAL(HAVE_EXIF, false)])
-		  ])
+PKG_CHECK_MODULES(EXIF, libexif > exif_minver,
+    [AM_CONDITIONAL(HAVE_EXIF, true)
+     AC_DEFINE(HAVE_EXIF, 1, [Define to enable EXIF support])
+    ],
+    [PKG_CHECK_MODULES(EXIF, libexif = exif_minver,
+        [AM_CONDITIONAL(HAVE_EXIF, true)
+         AC_DEFINE(HAVE_OLD_EXIF, 1, [Define if your EXIF library has old API])
+        ], [AM_CONDITIONAL(HAVE_EXIF, false)])
+    ])
 
 AC_SUBST(EXIF_CFLAGS)
 AC_SUBST(EXIF_LIBS)
@@ -201,22 +201,22 @@ dnl exempi checking
 AM_CONDITIONAL(HAVE_EXEMPI, false)
 
 AC_ARG_ENABLE(xmp,
-	AC_HELP_STRING([--disable-xmp],
-			[build without xmp support]))
+    AC_HELP_STRING([--disable-xmp],
+                   [build without xmp support]))
 msg_xmp=no
 if test "x$enable_xmp" != "xno"; then
-	PKG_CHECK_MODULES(EXEMPI, exempi-2.0 >= exempi_minver, [
-		  	  AM_CONDITIONAL(HAVE_EXEMPI, true)
-			  AC_DEFINE(HAVE_EXEMPI, 1, [Define to enable xmp support])
-			  ]
-                          msg_xmp=yes,
-	          	  [AM_CONDITIONAL(HAVE_EXEMPI, false)])
+    PKG_CHECK_MODULES(EXEMPI, exempi-2.0 >= exempi_minver,
+        [AM_CONDITIONAL(HAVE_EXEMPI, true)
+         AC_DEFINE(HAVE_EXEMPI, 1, [Define to enable xmp support])]
+        msg_xmp=yes,
+        [AM_CONDITIONAL(HAVE_EXEMPI, false)])
 
-	PKG_CHECK_MODULES(EXEMPI_NEW_API, exempi-2.0 >= exempi_minver_newapi,
-		  AC_DEFINE(HAVE_EXEMPI_NEW_API, 1, [Define if we have exempi with the new API]), true)
+    PKG_CHECK_MODULES(EXEMPI_NEW_API, exempi-2.0 >= exempi_minver_newapi,
+        AC_DEFINE(HAVE_EXEMPI_NEW_API, 1,
+            [Define if we have exempi with the new API]), true)
 
-	AC_SUBST(EXEMPI_CFLAGS)
-	AC_SUBST(EXEMPI_LIBS)
+    AC_SUBST(EXEMPI_CFLAGS)
+    AC_SUBST(EXEMPI_LIBS)
 fi
 
 dnl ==========================================================================
@@ -249,12 +249,12 @@ AM_CONDITIONAL(ENABLE_EMPTY_VIEW, test "x$ENABLE_EMPTY_VIEW" = "x1")
 dnl ==========================================================================
 
 AC_ARG_ENABLE(packagekit,
-	AC_HELP_STRING([--disable-packagekit],
-			[build without PackageKit support]))
+    AC_HELP_STRING([--disable-packagekit],
+        [build without PackageKit support]))
 msg_packagekit=no
 if test "x$enable_packagekit" != "xno"; then
-	msg_packagekit=yes
-	AC_DEFINE(ENABLE_PACKAGEKIT, 1, [define to enable PackageKit mimetype installer])
+    msg_packagekit=yes
+    AC_DEFINE(ENABLE_PACKAGEKIT, 1, [define to enable PackageKit mimetype installer])
 fi
 
 
@@ -263,10 +263,10 @@ dnl | se comprueba unique
 dnl | de lo contrario, se intenta utilizar libunique
 dnl ============================================================================
 case "$with_gtk" in
-	2.0) LIBUNIQUE_VERSION=1.0
-		;;
-	3.0) LIBUNIQUE_VERSION=3.0
-		;;
+    2.0) LIBUNIQUE_VERSION=1.0
+        ;;
+    3.0) LIBUNIQUE_VERSION=3.0
+        ;;
 esac
 
 PKG_CHECK_MODULES(UNIQUE, unique-$LIBUNIQUE_VERSION, enable_libunique=yes, enable_libunique=no)
@@ -277,15 +277,15 @@ AC_SUBST([UNIQUE_LIBS])
 AC_ARG_ENABLE(unique, [  --enable-unique         enable the use of libunique instead of g_application or gtk_application], enable_libunique=yes,)
 
 if test "x$enable_libunique" = "xyes"; then
-	UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DUSE_UNIQUE=1"
-	# fix for deprecated on 2.26
-	# unique en la version 1.0, contiene simbolos no definidos a partir de
-	# glib 2.26, pero puede ser obviado si se utiliza -DG_CONST_RETURN=const
-	if $PKG_CONFIG --atleast-version 2.26 glib-2.0; then
-		UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DG_CONST_RETURN=const"
-	fi
+    UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DUSE_UNIQUE=1"
+    # fix for deprecated on 2.26
+    # unique en la version 1.0, contiene simbolos no definidos a partir de
+    # glib 2.26, pero puede ser obviado si se utiliza -DG_CONST_RETURN=const
+    if $PKG_CONFIG --atleast-version 2.26 glib-2.0; then
+        UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DG_CONST_RETURN=const"
+    fi
 
-	EXTRA_CORE_MODULES="$EXTRA_CORE_MODULES unique-$LIBUNIQUE_VERSION"
+    EXTRA_CORE_MODULES="$EXTRA_CORE_MODULES unique-$LIBUNIQUE_VERSION"
 fi
 
 
@@ -299,40 +299,40 @@ AC_ARG_ENABLE(more-warnings,
 AC_HELP_STRING([--enable-more-warnings], [Maximum compiler warnings]),
 set_more_warnings="$enableval",[
 if test -f $srcdir/CVSVERSION; then
-	is_cvs_version=true
-	set_more_warnings=yes
+    is_cvs_version=true
+    set_more_warnings=yes
 else
-	set_more_warnings=no
+    set_more_warnings=no
 fi
 ])
 AC_MSG_CHECKING(for more warnings, including -Werror)
 if test "$GCC" = "yes" -a "$set_more_warnings" != "no"; then
-	AC_MSG_RESULT(yes)
-	WARNING_CFLAGS="\
-	-Wall \
-	-Wmissing-declarations -Wmissing-prototypes \
-	-Wnested-externs -Wpointer-arith \
-	-Wcast-align \
-	-Werror"
+    AC_MSG_RESULT(yes)
+    WARNING_CFLAGS="\
+    -Wall \
+    -Wmissing-declarations -Wmissing-prototypes \
+    -Wnested-externs -Wpointer-arith \
+    -Wcast-align \
+    -Werror"
 
-	for option in -Wstrict-aliasing=0 -Wno-pointer-sign; do
-		SAVE_CFLAGS="$CFLAGS"
-		CFLAGS="$CFLAGS $option"
-		AC_MSG_CHECKING([whether gcc understands $option])
-		AC_TRY_COMPILE([], [],
-			has_option=yes,
-			has_option=no,)
-		if test $has_option = yes; then
-		   	WARNING_CFLAGS="$WARNING_CFLAGS $option"
-		fi
-		AC_MSG_RESULT($has_option)
-		CFLAGS="$SAVE_CFLAGS"
-		unset has_option
-		unset SAVE_CFLAGS
-	done
-	unset option
+    for option in -Wstrict-aliasing=0 -Wno-pointer-sign; do
+        SAVE_CFLAGS="$CFLAGS"
+        CFLAGS="$CFLAGS $option"
+        AC_MSG_CHECKING([whether gcc understands $option])
+        AC_TRY_COMPILE([], [],
+            has_option=yes,
+            has_option=no,)
+        if test $has_option = yes; then
+            WARNING_CFLAGS="$WARNING_CFLAGS $option"
+        fi
+        AC_MSG_RESULT($has_option)
+        CFLAGS="$SAVE_CFLAGS"
+        unset has_option
+        unset SAVE_CFLAGS
+    done
+    unset option
 else
-	AC_MSG_RESULT(no)
+    AC_MSG_RESULT(no)
 fi
 
 AC_SUBST(WARNING_CFLAGS)
@@ -348,13 +348,13 @@ AC_TRY_RUN([#include <time.h>
                   struct tm tm = {0};
                   tm.tm_year = 99;
                   if (strftime(buf, 100, "%EY", &tm) == 4 &&
-		      strcmp (buf, "1999")==0)
+                      strcmp (buf, "1999")==0)
                     return 0;
                   return 1;
                 }
             ],
-	    AC_DEFINE(HAVE_STRFTIME_EXTENSION, 1, [Define if strftime supports %E and %O modifiers.])
-            )
+    AC_DEFINE(HAVE_STRFTIME_EXTENSION, 1, [Define if strftime supports %E and %O modifiers.])
+)
 
 dnl ===========================================================================
 
