--- a/mate-file-manager/libcaja-extension/Makefile.am
+++ b/mate-file-manager/libcaja-extension/Makefile.am
@@ -11,6 +11,7 @@ INCLUDES=\
 	$(WARNING_CFLAGS) \
 	$(DISABLE_DEPRECATED_CFLAGS) \
 	-DDATADIR=\""$(datadir)"\" \
+	$(UNIQUE_CFLAGS) \
 	$(NULL)
 
 libcaja_extension_la_LDFLAGS=\
