tentata sovrascrittura di "/usr/share/dbus-1/services/org.freedesktop.Notifications.service" presente anche nel pacchetto notification-daemon 0.5.0-2 (https://github.com/perberos/Mate-Desktop-Environment/issues/38)

--- a/mate-notification-daemon/configure.ac
+++ b/mate-notification-daemon/configure.ac
@@ -251,7 +251,7 @@ AC_SUBST([AM_CXXFLAGS])
 AC_CONFIG_FILES([
 Makefile
 data/Makefile
-data/org.freedesktop.Notifications.service
+data/org.freedesktop.mate.Notifications.service
 po/Makefile.in
 src/Makefile
 src/daemon/Makefile
