--- a/mate-notification-daemon/data/Makefile.in
+++ b/mate-notification-daemon/data/Makefile.in
@@ -36,7 +36,7 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = data
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
-	$(srcdir)/org.freedesktop.Notifications.service.in
+	$(srcdir)/org.freedesktop.mate.Notifications.service.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/macros/intltool.m4 \
 	$(top_srcdir)/macros/libtool.m4 \
@@ -49,7 +49,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = org.freedesktop.Notifications.service
+CONFIG_CLEAN_FILES = org.freedesktop.mate.Notifications.service
 CONFIG_CLEAN_VPATH_FILES =
 AM_V_GEN = $(am__v_GEN_$(V))
 am__v_GEN_ = $(am__v_GEN_$(AM_DEFAULT_VERBOSITY))
@@ -264,7 +264,7 @@ icon32_DATA = icons/32x32/mate-notification-properties.png
 icon48_DATA = icons/48x48/mate-notification-properties.png
 iconscalable_DATA = icons/scalable/mate-notification-properties.svg
 servicedir = $(DBUS_SERVICES_DIR)
-service_DATA = org.freedesktop.Notifications.service
+service_DATA = org.freedesktop.mate.Notifications.service
 schemasdir = $(MATECONF_SCHEMA_FILE_DIR)
 schemas_in_files = mate-notification-daemon.schemas.in
 schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
@@ -313,7 +313,7 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-org.freedesktop.Notifications.service: $(top_builddir)/config.status $(srcdir)/org.freedesktop.Notifications.service.in
+org.freedesktop.mate.Notifications.service: $(top_builddir)/config.status $(srcdir)/org.freedesktop.mate.Notifications.service.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
