tentata sovrascrittura di "/usr/share/applications/network-scheme.desktop" presente anche nel pacchetto nautilus 2.32.2.1-1 (https://github.com/perberos/Mate-Desktop-Environment/issues/38)

--- a/mate-file-manager/src/Makefile.in
+++ b/mate-file-manager/src/Makefile.in
@@ -435,7 +435,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-NULL = 
+NULL =
 SUBDIRS = file-manager
 INCLUDES = \
 	-I$(top_srcdir) 					\
@@ -467,11 +467,11 @@ LDADD = \
 	$(POPT_LIBS) \
 	$(NULL)
 
-desktop_in_files = network-scheme.desktop.in
+desktop_in_files = mate-network-scheme.desktop.in
 desktop_files = $(desktop_in_files:.desktop.in=.desktop)
 desktopdir = $(datadir)/mate/network/
 schemedir = $(datadir)/applications
-scheme_DATA = network-scheme.desktop
+scheme_DATA = mate-network-scheme.desktop
 caja_SOURCES = \
 	caja-actions.h			\
 	caja-application.c			\
@@ -731,19 +731,19 @@ clean-libexecPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-caja$(EXEEXT): $(caja_OBJECTS) $(caja_DEPENDENCIES) 
+caja$(EXEEXT): $(caja_OBJECTS) $(caja_DEPENDENCIES)
 	@rm -f caja$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(caja_OBJECTS) $(caja_LDADD) $(LIBS)
-caja-autorun-software$(EXEEXT): $(caja_autorun_software_OBJECTS) $(caja_autorun_software_DEPENDENCIES) 
+caja-autorun-software$(EXEEXT): $(caja_autorun_software_OBJECTS) $(caja_autorun_software_DEPENDENCIES)
 	@rm -f caja-autorun-software$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(caja_autorun_software_OBJECTS) $(caja_autorun_software_LDADD) $(LIBS)
-caja-connect-server$(EXEEXT): $(caja_connect_server_OBJECTS) $(caja_connect_server_DEPENDENCIES) 
+caja-connect-server$(EXEEXT): $(caja_connect_server_OBJECTS) $(caja_connect_server_DEPENDENCIES)
 	@rm -f caja-connect-server$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(caja_connect_server_OBJECTS) $(caja_connect_server_LDADD) $(LIBS)
-caja-convert-metadata$(EXEEXT): $(caja_convert_metadata_OBJECTS) $(caja_convert_metadata_DEPENDENCIES) 
+caja-convert-metadata$(EXEEXT): $(caja_convert_metadata_OBJECTS) $(caja_convert_metadata_DEPENDENCIES)
 	@rm -f caja-convert-metadata$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(caja_convert_metadata_OBJECTS) $(caja_convert_metadata_LDADD) $(LIBS)
-caja-file-management-properties$(EXEEXT): $(caja_file_management_properties_OBJECTS) $(caja_file_management_properties_DEPENDENCIES) 
+caja-file-management-properties$(EXEEXT): $(caja_file_management_properties_OBJECTS) $(caja_file_management_properties_DEPENDENCIES)
 	@rm -f caja-file-management-properties$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(caja_file_management_properties_OBJECTS) $(caja_file_management_properties_LDADD) $(LIBS)
 
