--- a/mate-file-manager/po/POTFILES.in
+++ b/mate-file-manager/po/POTFILES.in
@@ -113,4 +113,4 @@ src/caja-window-toolbars.c
 src/caja-window.c
 src/caja-x-content-bar.c
 src/caja-zoom-control.c
-src/network-scheme.desktop.in
+src/mate-network-scheme.desktop.in
